# shap

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/shap-agent/: Cargo.toml
crates/shap-agent/src/: acp.rs  lib.rs  registry.rs
crates/shap-cli/: Cargo.toml
crates/shap-cli/src/: app.rs  cli.rs  main.rs
crates/shap-cli/tests/: capture.rs  commit.rs  config_wizard.rs  doctor.rs  selection.rs  sessions.rs  status.rs
crates/shap-cli/tests/snapshots/: status__status_human_output.snap
crates/shap-core/: Cargo.toml
crates/shap-core/src/: agent.rs  commands.rs  config.rs  config_wizard.rs  doctor.rs  error.rs  files.rs  git.rs  lib.rs  output_capture.rs  paths.rs  picker.rs  prompt.rs  session.rs  state.rs
crates/shap-core/src/snapshots/: shap_core__doctor__tests__doctor_healthy.snap  shap_core__doctor__tests__doctor_missing_agent.snap  shap_core__prompt__tests__commit_prompt_snapshot.snap  shap_core__prompt__tests__read_payload_snapshot_truncated.snap
crates/shap-shell/: Cargo.toml
crates/shap-shell/src/: lib.rs  prompt.rs  render.rs
docs/: agents.md  config.md  getting-started.md  index.md  installation.md  nix.md  shell-integration.md
shell/zsh/: shap.zsh
specs/001-shell-agent-acp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shell-agent-acp/checklists/: requirements.md
specs/001-shell-agent-acp/contracts/: cli-commands.md  config-schema.md  session-records.md
specs/002-flake-nix-devshell/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-flake-nix-devshell/checklists/: requirements.md
specs/002-flake-nix-devshell/contracts/: flake-outputs.md
specs/003-project-documentation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-project-documentation/checklists/: requirements.md
specs/003-project-documentation/contracts/: docs-structure.md
specs/004-config-init-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-config-init-wizard/checklists/: requirements.md
specs/004-config-init-wizard/contracts/: cli-commands.md
specs/005-colon-command-highlighting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-colon-command-highlighting/checklists/: requirements.md
specs/005-colon-command-highlighting/contracts/: colon-commands.md
