[package]
name = "shap-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shap-core = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
shell-words = { workspace = true }
# ACP SDK wired in at T021 (the ACP wrapper); kept out until then so the
# US1 library layer builds lean (Constitution IX).
# agent-client-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
