[package]
name = "shap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
shell-words = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
dunce = { workspace = true }
which = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
anstream = { workspace = true }
anstyle = { workspace = true }
indicatif = { workspace = true }
terminal_size = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-case = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
